# internal/mcpauth/gen/http/access_tokens/server/server.go
@@ -18,10 +18,11 @@ import (
 
 // Server lists the access_tokens service endpoint HTTP handlers.
 type Server struct {
-	Mounts  []*MountPoint
-	Secret  http.Handler
-	Code    http.Handler
-	Refresh http.Handler
+	Mounts    []*MountPoint
+	Assertion http.Handler
+	Secret    http.Handler
+	Code      http.Handler
+	Refresh   http.Handler
 }
 
 // MountPoint holds information about the mounted endpoints.
@@ -51,13 +52,15 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
+			{"Assertion", "POST", "/assertion"},
 			{"Secret", "POST", "/token"},
 			{"Code", "POST", "/code"},
 			{"Refresh", "POST", "/refresh"},
 		},
-		Secret:  NewSecretHandler(e.Secret, mux, decoder, encoder, errhandler, formatter),
-		Code:    NewCodeHandler(e.Code, mux, decoder, encoder, errhandler, formatter),
-		Refresh: NewRefreshHandler(e.Refresh, mux, decoder, encoder, errhandler, formatter),
+		Assertion: NewAssertionHandler(e.Assertion, mux, decoder, encoder, errhandler, formatter),
+		Secret:    NewSecretHandler(e.Secret, mux, decoder, encoder, errhandler, formatter),
+		Code:      NewCodeHandler(e.Code, mux, decoder, encoder, errhandler, formatter),
+		Refresh:   NewRefreshHandler(e.Refresh, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -66,6 +69,7 @@ func (s *Server) Service() string { return "access_tokens" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.Assertion = m(s.Assertion)
 	s.Secret = m(s.Secret)
 	s.Code = m(s.Code)
 	s.Refresh = m(s.Refresh)
@@ -76,6 +80,7 @@ func (s *Server) MethodNames() []string { return accesstokens.MethodNames[:] }
 
 // Mount configures the mux to serve the access_tokens endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
+	MountAssertionHandler(mux, h.Assertion)
 	MountSecretHandler(mux, h.Secret)
 	MountCodeHandler(mux, h.Code)
 	MountRefreshHandler(mux, h.Refresh)
@@ -84,6 +89,59 @@ func Mount(mux goahttp.Muxer, h *Server) {
 // Mount configures the mux to serve the access_tokens endpoints.
 func (s *Server) Mount(mux goahttp.Muxer) {
 	Mount(mux, s)
+}
+
+// MountAssertionHandler configures the mux to serve the "access_tokens"
+// service "assertion" endpoint.
+func MountAssertionHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/assertion", f)
+}
+
+// NewAssertionHandler creates a HTTP handler which loads the HTTP request and
+// calls the "access_tokens" service "assertion" endpoint.
+func NewAssertionHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeAssertionRequest(mux, decoder)
+		encodeResponse = EncodeAssertionResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "assertion")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "access_tokens")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			if errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+		}
+	})
 }
 
 // MountSecretHandler configures the mux to serve the "access_tokens" service
